<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="20dp"
        android:backgroundTint="#F8F8F8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/danielburk1"
                android:contentDescription="@string/person"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/winter_in_p"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/winter_in_p"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/frame"
                        android:gravity="center"
                        android:text="@string/day"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/job"
                        android:layout_width="0dp"
                        android:layout_height="16dp"
                        android:layout_weight="1"
                        android:text="@string/job"
                        android:textColor="#DE122940"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/nationalityValue"
                        android:textColor="#DE122940"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="0dp"
                        android:layout_height="17dp"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:text="@string/locationValue"
                        android:textColor="#99263238"
                        android:textSize="13sp"
                        app:drawableLeftCompat="@drawable/location" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:text="@string/timeValue"
                        android:textColor="#99263238"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
                        android:text="@string/reviewsValue"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="10dp"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/rateValue"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:layout_marginStart="5dp"
                        app:drawableRightCompat="@drawable/star" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>